# M1Connector

./: README.md  pyproject.toml
m1connector/: M1Connector.py  __init__.py
tests/: test_m1connector.py
