[tool.poetry]
name = "M1Connector"
version = "0.1.0"
description = "A simple python connector to a mysql database"
authors = ["Keegan van Gemeren <Keegan.vangemeren@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyodbc = "^4.0.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
